sm-chat-nav structure to integrate w/ backbone

--- a/tool-bar/index.haml
+++ b/tool-bar/index.haml
@@ -35,26 +35,10 @@
         %ul
           %li
             %a
-          %li
-            %a
-          %li
-            %a
-          %li
-            %a
-          %li
-            %a
-          %li
-            %a
-          %li
-            %a
-          %li
-            %a
-          %li
-            %a
-          %li
-            %a
-          %li
-            %a
+                %img
+                %span
+                %span
+         
       #sm-util-nav
         #button
         #settings
