--- a/tool-bar/css/style.css
+++ b/tool-bar/css/style.css
@@ -207,7 +207,7 @@ h2 {
   overflow:auto;
   
 }
-#sm-chat-nav ul li a:before{
+#sm-chat-nav ul li img{
  content:url('http://www.gravatar.com/avatar/741f1590c13bb96b2507947c39fa1c7e?s=32');
 }
 #sm-chat-nav ul{
@@ -220,7 +220,7 @@ h2 {
 #sm-chat-nav ul li{
   padding:4px 0 3px 0;
 }
-#sm-chat-nav ul li a:after{
+#sm-chat-nav ul li a:last-child{
  content:url('http://site-marketing-images.s3.amazonaws.com/2013/odinproject/img/grn.png');
 
 }
