--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -548,6 +548,39 @@ input { outline: none; }
   bottom: 0;
 }
 
+@-webkit-keyframes pulse {
+  from { opacity: 0; }
+  to { opacity: 0.5; }
+}
+@-moz-keyframes pulse {
+  from { opacity: 0; }
+  to { opacity: 0.5; }
+}
+@-o-keyframes pulse {
+  from { opacity: 0; }
+  to { opacity: 0.5; }
+}
+@keyframes pulse {
+  from { opacity: 0; }
+  to { opacity: 0.5; }
+}
+
+.new-message::before{
+  content: "";
+  position: absolute;
+  top: -100%;
+  left: 0;
+  right: 0;
+  bottom: -100%;
+  opacity: 0.25;
+  background: radial-gradient(white, black);
+  -webkit-animation: pulse 500ms ease alternate infinite; /* Safari 4+ */
+  -moz-animation:    pulse 500ms ease alternate infinite; /* Fx 5+ */
+  -o-animation:      pulse 500ms ease alternate infinite; /* Opera 12+ */
+  animation:         pulse 500ms ease alternate infinite; /* IE 10+ */
+}
+
+
 
 
 
